Added logging and small click bugfix

--- a/app/templates/train.html
+++ b/app/templates/train.html
@@ -121,6 +121,7 @@ function ready() {
         this.updateTimer();
       },
       vote: function(ev) {
+        if (!ev.target.value) return;
         // Hide, display message
         this.showbuttons = false;
         this.show = false;
