--- a/app/templates/train.html
+++ b/app/templates/train.html
@@ -66,6 +66,7 @@
               <button value='3'>3</button><br>
               <button value='2'>2</button><br>
               <button value='1'>1 - Not similar</button><br><br>
+              <button value='0'>I don't know</button>
             </div>
           <div>
         </div>
