--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -71,6 +71,27 @@
 <script src="{{url_for('static', filename='vue.js')}}" type="text/javascript"></script>
 
 <script type="text/javascript">
+// Knuth shuffle
+function shuffle(array) {
+  var currentIndex = array.length, temporaryValue, randomIndex;
+
+  // While there remain elements to shuffle...
+  while (0 !== currentIndex) {
+
+    // Pick a remaining element...
+    randomIndex = Math.floor(Math.random() * currentIndex);
+    currentIndex -= 1;
+
+    // And swap it with the current element.
+    temporaryValue = array[currentIndex];
+    array[currentIndex] = array[randomIndex];
+    array[randomIndex] = temporaryValue;
+  }
+
+  return array;
+}
+
+// On document load
 function ready() {
 
   function initMasonry() {
@@ -93,7 +114,9 @@ function ready() {
       getAllPaintings: function() {
         return axios.get('/api/get_all_paintings')
         .then((response) => {
-          this.paintings = response.data.slice(0,60);
+          var paintings = response.data;
+          paintings = shuffle(paintings);
+          this.paintings = paintings.slice(0,60);
         }).catch((error) => {
           this.message = "Error loading all paintings list";
         });
@@ -131,7 +154,12 @@ function ready() {
     }
   });
 
-  vm.getAllPaintings().then(initMasonry);
+  vm.getAllPaintings()
+  .then(() => {
+    // Returns jquery deferred object
+    return $('.grid').imagesLoaded();
+  })
+  .then(initMasonry);
 
   // USE THIS WHEN SHOWING EXTRA paintings
   // grid.masonry('layout');
