--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -12,8 +12,14 @@
 
   <style>
   /* Flexbox layout */
-  html, body {
+  html, body, .modal-content {
     background: #55616F;
+  }
+  .modal {
+    background: rgba(0, 0, 0, 0.3);
+  }
+  .modal-content {
+    color: white;
   }
   .msgbar {
     width: 100%;
@@ -28,6 +34,15 @@
   }
   .portfoliothumbnail {
     width: 100%;
+  }
+  .flexrow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .flexrow > * {
+    flex-grow: 0;
+    margin: 10px;
   }
   /*.imgframe {
     padding-left: 20%;
@@ -60,17 +75,45 @@
         </div>
         <div class="grid">
           <div class="grid-sizer"></div>
-          <div v-for="painting in paintings" class="grid-item">
-            <img v-bind:src="painting.afbeelding" class="portfoliothumbnail">
+          <div v-for="(painting, index) in paintings" class="grid-item">
+            <img v-on:click="showModal" v-bind:data-localindex="index" v-bind:src="painting.afbeelding" class="portfoliothumbnail">
           </div>
         </div>
+  <div class="modal fade" id="paintingmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title img-responsive" id="myModalLabel">Related images</h4>
+        </div>
+        <div class="modal-body">
+          <div class="center-block">
+            <img v-if="selectedpainting" v-bind:src="selectedpainting.afbeelding" class="img-fluid">
+          </div>
+          <span style="text-align:center;width=100%;margin:10px;">Related images</span>
+          <div class="flexrow">
+            <div v-if="selectedpainting" v-for="(painting, index) in relatedpaintings">
+              <img v-on:click="showModal" v-bind:data-localindex="index" v-bind:src="painting.afbeelding" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 {% endraw %}
 
 <script src="https://unpkg.com/axios@0.12.0/dist/axios.min.js"></script>
 <script src="{{url_for('static', filename='vue.js')}}" type="text/javascript"></script>
 
 <script type="text/javascript">
+
 // Knuth shuffle
 function shuffle(array) {
   var currentIndex = array.length, temporaryValue, randomIndex;
@@ -107,10 +150,24 @@ function ready() {
     data: {
       message: '',
       paintings: [],
+      selectedpainting: null,
+      relatedpaintings: null,
     },
     computed: {
     },
     methods: {
+      showModal: function(ev) {
+        console.log(ev.target);
+        if ($(ev.target).hasClass('portfoliothumbnail')) {
+          var p = this.paintings;
+        } else {
+          var p = this.relatedpaintings;
+        }
+        this.selectedpainting = p[$(ev.target).data('localindex')];
+        this.getRelatedPaintings(this.selectedpainting);
+        $('#paintingmodal').modal('show');
+      },
+
       getAllPaintings: function() {
         return axios.get('/api/get_all_paintings')
         .then((response) => {
@@ -122,32 +179,11 @@ function ready() {
           this.message = "Error loading all paintings list";
         });
       },
-
-      loadAndShow: function() {
-        // Promises!
-        this.getMainPainting().then(this.getSimilarPainting)
-        .then(() => {
-          // TODO: Wait for img src load!
-          this.show = true;
-          this.showbuttons = true;
-          this.startTimer();
-        });
-      },
-      getMainPainting: function() {
-        return axios.get('/api/get_random_painting')
-        .then((response) => {
-          this.mainimg = response.data;
-          this.message = response.data.msg;
-          return this.mainimg;
-        }).catch((error) => {
-          this.message = "Error loading main painting!";
-        });
-      },
-      getSimilarPainting: function(paintingobj) {
+      getRelatedPaintings: function(paintingobj) {
         // Send painting object so backend can compare on whatever attribute
-        return axios.post('/api/get_similar_painting', paintingobj)
+        return axios.post('/api/get_similar_paintings/5', paintingobj)
         .then((response) => {
-          this.similarimg = response.data;
+          this.relatedpaintings = response.data;
         }).catch((error) => {
           this.message = "Error loading similar paintings!";
         });
